# USThing-Backend-Technical-Test-2024

./: .env.example  .gitignore  Cargo.toml  README.md
backend-driver/: Cargo.toml
backend-driver/src/: main.rs
backend-models/: Cargo.toml
backend-models/src/: lib.rs
backend-routes/: Cargo.toml
backend-routes/src/: lib.rs  library.rs
backend-utils/: Cargo.toml
backend-utils/src/: extractors.rs  lib.rs
docker/: Dockerfile  docker-compose.yml
