[package]
name = "backend_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.13.4", features = ["axum", "scalar"] }
axum = "0.7.7"
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

backend_routes = { path = "../backend-routes" }
backend_utils = { path = "../backend-utils" }
