[package]
name = "backend_routes"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = "0.13.4"
axum = { version =  "0.7.7", features = ["macros"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.128"

backend_models = { path = "../backend-models" }
backend_utils = { path = "../backend-utils" }
